nassh: prefs: fix navigation panel in small windows
If the window is too small to fit all the content, allow the user to
scroll it.  This doesn't happen by default due to the styling we use
for the options page.

Reviewed-on: https://chromium-review.googlesource.com/c/apps/libapps/+/2153387
Tested-by: kokoro <noreply+kokoro@google.com>

--- a/nassh/css/nassh_preferences_editor.css
+++ b/nassh/css/nassh_preferences_editor.css
@@ -38,6 +38,7 @@ body {
   z-index: 3;
   -webkit-margin-start: 0;
   -webkit-margin-end: 15px;
+  overflow: auto;
 }
 
 /*
